<resources>
    <string name="app_name">TallerListView2018</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="valordellado">Valor del Lado</string>
    <string name="calcular">CALCULAR</string>
    <string name="borrar">BORRAR</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="lado1">Lado 1 :</string>
    <string name="lado2">Lado 2 :</string>
    <string name="triangulo">Triangulo</string>
    <string name="valorbase">Valor Base :</string>
    <string name="valoraltura">Valor Altura :</string>
    <string name="valordelradio">Valor del Radio :</string>
    <string name="esfera">Esfera</string>
    <string name="no">No.</string>
    <string name="operacion">Operacion</string>
    <string name="datos">Datos</string>
    <string name="dato2">Dato 2</string>
    <string name="resultado">Resultado</string>
    <string name="ok">OK</string>
    <string name="cilindro">Cilindro</string>
    <string name="cono">Cono</string>
    <string name="areas">Areas</string>
    <string name="volumenes">Volumenes</string>
    <string name="operaciones_Realizadas">Operaciones Realizadas</string>

    <array name="ValoresAreas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
    </array>

    <array name="ValoresVolumen">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
    </array>

    <array name="Valores">
        <item>@string/areas</item>
        <item>@string/volumenes</item>
        <item>@string/operaciones_Realizadas</item>
    </array>

</resources>
